[workspace]
members = ["borrowing","conditionals",
    "control-flow-conditionals", "for-loop", "function-arguments", "loop-control", "loops", "match-control", "return-values", "shadowing", "unit-fonctions",
    "variables/mutable",
    "variables/variables", "while-loops/user-input", "while-loops/while-loops",
]
