[workspace]
members = ["borrowing","conditionals",
    "control-flow-conditionals", "error-handling", "for-loop", "function-arguments", "loop-control", "loops", "match-control", "panic", "return-values", "shadowing", "unit-fonctions",
    "variables/mutable",
    "variables/variables", "while-loops/user-input", "while-loops/while-loops",
]
